--- a/css/css.css
+++ b/css/css.css
@@ -1,49 +1,159 @@
+body{
+    margin: 0;
+}
 header {
-
    height: 11vh;
    display: flex;
 }
 header img {
     height: 11vh;
     margin-left: auto;
-   margin-right: auto;
-   justify-content: space-around;
+    margin-right: auto;
+    justify-content: space-around;
 }
 #meny {
     background-color: black;
-    height: 9vh;
+    height: 4vh;
+    padding: 1px;
+    display: flex;
+    justify-content: space-around;
 }
 nav a {
     color: white;
+    text-decoration: none;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.dropdown {
+    position: relative;
     display: inline-block;
-    vertical-align: middle;
-}
-
-#kat {
+  }
+  
+  .dropdown-content {
     display: none;
-    background-color: teal;
-}
-#kat.active {
+    position: absolute;
+    background-color: #0f0d0d;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    padding: 5px;
+  }
+  
+  .dropdown:hover .dropdown-content {
     display: block;
-}
+  }
 
 #start {
-   width: 100vw;
-   height: 30vh;
+    width: 100vw;
+   overflow: hidden;
+}
+img {
+    display: block;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-article {
-    background-color: blue;
+h3{
+    text-align: center;
+}
+section {
+    padding: 10px;
+    margin: 10px;
 }
 
 footer {
     background-color:black;
     height: 6vh;
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    
 }
 
 #footer {
     height: 4vh; 
-    padding: 1px;
-    display: inline-block;
-    vertical-align: middle;
+    padding: 6px;
+    float: right;
+   
+}
+
+footer a {
+    float: left;
+    color: white;
+    margin-top: 12px;
+    margin-left: 4px;
+}
+
+@media screen and (min-width: 600px) {
+    section {
+        overflow: hidden;
+        display: grid;
+        grid-template-areas: 
+        "bi1 ar1"
+        "ar2 bi2"
+        "bi3 ar3";
+    }
+    
+    #b1 {
+        grid-area: bi1;
+        padding: 3px;
+        align-self: center;
+    }
+    #a1 {
+        grid-area: ar1;
+        padding: 3px;
+    }
+    #b2 {
+        grid-area: bi2;
+        padding: 3px;
+    }
+    #a2 {
+        grid-area: ar2;
+        padding: 3px;
+    }
+    #b3 {
+        grid-area: bi3;
+        padding: 3px;
+    }
+    #a3 {
+        grid-area: ar3;
+        padding: 3px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    section {
+        display: grid;
+        grid-template-areas: 
+        "bi1 bi2 bi3"
+        "ar1 ar2 ar3";
+    }
+    
+    #b1 {
+        grid-area: bi1;
+        padding: 3px;
+        align-self: center;
+    }
+    #a1 {
+        grid-area: ar1;
+        padding: 3px;
+    }
+    #b2 {
+        grid-area: bi2;
+        padding: 3px;
+    }
+    #a2 {
+        grid-area: ar2;
+        padding: 3px;
+    }
+    #b3 {
+        grid-area: bi3;
+        padding: 3px;
+    }
+    #a3 {
+        grid-area: ar3;
+        padding: 3px;
+    }
 }
