--- a/css/css.css
+++ b/css/css.css
@@ -17,6 +17,8 @@ header img {
     padding: 1px;
     display: flex;
     justify-content: space-around;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 nav a {
     color: white;
